# TPS-Project

./: .gitignore  README.md  pyproject.toml
lib/: model.py
lib/backbones/: __init__.py  gru.py  resnet.py
lib/data/datasets/: cuhkpedes.py
lib/embedding/: __init__.py  embedding.py
lib/losses/: __init__.py  cross_entropy.py  embedding.py  functional.py
lib/utils/: caption.py
